0.4.18/_sources/api/napari.layers.Image.rst
napari.layers.Image
===================

.. currentmodule:: napari.layers

.. autoclass:: Image
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Image.as_layer_data_tuple
   
   
      ~Image.bind_key
   
   
      ~Image.block_update_properties
   
   
      ~Image.click_plane_from_click_data
   
   
      ~Image.create
   
   
      ~Image.data_to_world
   
   
      ~Image.get_ray_intersections
   
   
      ~Image.get_source_str
   
   
      ~Image.get_status
   
   
      ~Image.get_value
   
   
      ~Image.projected_distance_from_mouse_drag
   
   
      ~Image.refresh
   
   
      ~Image.reset_contrast_limits
   
   
      ~Image.reset_contrast_limits_range
   
   
      ~Image.save
   
   
      ~Image.set_view_slice
   
   
      ~Image.world_to_data
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Image.affine
      ~Image.attenuation
      ~Image.blending
      ~Image.bounding_box
      ~Image.class_keymap
      ~Image.colormap
      ~Image.colormaps
      ~Image.contrast_limits
      ~Image.contrast_limits_range
      ~Image.cursor
      ~Image.cursor_size
      ~Image.custom_interpolation_kernel_2d
      ~Image.data
      ~Image.data_level
      ~Image.data_raw
      ~Image.depiction
      ~Image.downsample_factors
      ~Image.dtype
      ~Image.editable
      ~Image.experimental_clipping_planes
      ~Image.extent
      ~Image.gamma
      ~Image.help
      ~Image.interactive
      ~Image.interpolation
      ~Image.interpolation2d
      ~Image.interpolation3d
      ~Image.iso_threshold
      ~Image.level_shapes
      ~Image.loaded
      ~Image.metadata
      ~Image.mode
      ~Image.mouse_pan
      ~Image.mouse_zoom
      ~Image.name
      ~Image.ndim
      ~Image.opacity
      ~Image.plane
      ~Image.rendering
      ~Image.rotate
      ~Image.scale
      ~Image.shear
      ~Image.source
      ~Image.thumbnail
      ~Image.translate
      ~Image.translate_grid
      ~Image.visible
      
      
      
      
   
   

   .. rubric:: Details